<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et01"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:hint="@string/v1"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et02"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/v2"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="@+id/et01"
        app:layout_constraintTop_toBottomOf="@+id/et01" />

    <EditText
        android:id="@+id/et03"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="49dp"
        android:ems="10"
        android:hint="@string/v3"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="@+id/et02"
        app:layout_constraintTop_toBottomOf="@+id/et02" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="49dp"
        android:text="@string/res"
        app:layout_constraintStart_toStartOf="@+id/btCalc"
        app:layout_constraintTop_toBottomOf="@+id/btCalc" />

    <Button
        android:id="@+id/btCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:text="@string/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et03" />
</androidx.constraintlayout.widget.ConstraintLayout>